kubernetes/basic/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: banner-deploy
  name: banner-deploy
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: banner-deploy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: banner-deploy
    spec:
      containers:
      - image: chrisedrego/pizza:banner
        imagePullPolicy: IfNotPresent
        name: pizza
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
