kubernetes/basic/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: banner-deploy
  name: banner-deploy
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: banner-deploy
  sessionAffinity: None
  type: ClusterIP
