kubernetes/basic/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banner
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: bhau-cha-banner.dev.didevops.com
    http:
      paths:
      - backend:
          service:
            name: banner-deploy
            port:
              number: 80
        path: /
        pathType: Prefix
